--- a/Develop/package.json
+++ b/Develop/package.json
@@ -5,6 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"wait-on tcp:3001 && cd client && npm run dev\"",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "concurrently \"cd server && npm run build\" \"cd client && npm run build\"",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "apollo": "^2.34.0",
-    "graphql": "^16.9.0"
+    "graphql": "^16.9.0",
+    "wait-on": "^8.0.1"
   }
 }
