--- a/Develop/package.json
+++ b/Develop/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "apollo": "^2.34.0",
     "graphql": "^16.9.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "wait-on": "^8.0.1"
   }
 }
