--- a/Develop/server/package.json
+++ b/Develop/server/package.json
@@ -20,8 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.0.0",
     "@apollo/server": "^4.10.4",
-    "graphql": "^16.9.0",
-    "jsonwebtoken": "^8.5.1"
+    "graphql": "^16.9.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
