--- a/Develop/package.json
+++ b/Develop/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "concurrently": "^8.2.0"
   },
   "dependencies": {
